Fixed telegram files downloading